<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>point_cloud_fusion</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>
  <author email="lukas.zanger@rwth-aachen.de">Lukas Zanger</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
