<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>point_cloud_fusion</name>
  <version>1.3.0</version>
  <description>Fuses multiple point clouds into a single point cloud with common target frame.</description>

  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>
  <author email="lukas.zanger@rwth-aachen.de">Lukas Zanger</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tracetools</depend>
  <depend>tracetools_launch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
